Fix content always having scrollbar

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -9,7 +9,7 @@
     }
 
     .content {
-      overflow: scroll;
+      overflow-y: auto;
     }
   }
 }
